--- a/app/src/main/res/drawable/custom_progress_bar.xml
+++ b/app/src/main/res/drawable/custom_progress_bar.xml
@@ -1,20 +1,20 @@
 <!-- res/drawable/custom_progress_bar.xml -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- 배경 트랙 (회색) -->
+    <!-- 배경 트랙 -->
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
-            <corners android:radius="3dp" /> <!-- 모서리 둥글게 -->
-            <solid android:color="#E0E0E0" /> <!-- 연한 회색 배경 -->
+            <corners android:radius="30dp" />
+            <solid android:color="@color/background_warm_beige" />
         </shape>
     </item>
 
-    <!-- 진행 상태 (주황색) -->
+    <!-- 진행 상태 -->
     <item android:id="@android:id/progress">
         <scale android:scaleWidth="100%"> <!-- 스케일 애니메이션을 위해 -->
             <shape android:shape="rectangle">
-                <corners android:radius="3dp" /> <!-- 모서리 둥글게 -->
-                <solid android:color="#FFA500" /> <!-- 주황색 (Orange) -->
+                <corners android:radius="30dp" />
+                <solid android:color="@color/primary" />
             </shape>
         </scale>
     </item>
