--- a/app/src/main/res/layout/cook_write_step.xml
+++ b/app/src/main/res/layout/cook_write_step.xml
@@ -165,5 +165,8 @@
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"/>
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
