--- a/app/src/main/res/layout/item_cook_tip_list.xml
+++ b/app/src/main/res/layout/item_cook_tip_list.xml
@@ -56,6 +56,7 @@
                 android:layout_weight="1"/>
 
             <ImageView
+                android:id="@+id/iv_like_icon"
                 android:layout_width="18dp"
                 android:layout_height="18dp"
                 android:src="@drawable/ic_like" />
@@ -68,6 +69,7 @@
                 android:text="10" />
 
             <ImageView
+                android:id="@+id/iv_comment_icon"
                 android:layout_width="18dp"
                 android:layout_height="18dp"
                 android:layout_marginStart="12dp"
