--- a/app/src/main/res/layout/toolbar_write.xml
+++ b/app/src/main/res/layout/toolbar_write.xml
@@ -63,6 +63,21 @@
             android:layout_gravity="center_vertical|end"
             android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/btn_temp_list"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:fontFamily="@font/notosans_regular"
+                android:gravity="center"
+                android:includeFontPadding="false"
+                android:paddingHorizontal="16dp"
+                android:text="(0)"
+                android:textColor="@color/text_primary"
+                android:textSize="14sp" />
+
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
@@ -87,6 +102,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/save_button_card"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
                 app:cardBackgroundColor="@color/primary"
